--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/dusk": "^6.15",
         "laravel/framework": "^8.12",
+        "laravel/nexmo-notification-channel": "^2.5",
         "laravel/tinker": "^2.5",
         "laravel/ui": "3.0",
         "lcobucci/jwt": "3.3.3",
