--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "3.0",
         "lcobucci/jwt": "3.3.3",
+        "maatwebsite/excel": "^3.1",
         "phpoffice/phpspreadsheet": "^1.15",
         "santigarcor/laratrust": "^6.3",
         "sentry/sentry-laravel": "^2.5",
